@@ -1,14 +1,24 @@
--detect long filenames under Windows during sync (partner, download binary file, 36)
- and during import
--sync issues Doug
+-mail Tim about 2 committed patches (cards instead of all_cards) 
 
--disable automatic media deletion
+-With 0 scheduled and 0 not memorised cards, the button shows "Learn
+ahead of schedule" If you go then to the Configuration windows and hit ok, the label
+changes to "Show answer" (CFrei)
+
+-always create media and latex dir if it does not exist (CFrei)
+
+-make mediadir relative to database location, not to datadir (CFrei)
+
+-remember last show statictics page
+
+-expand answer preferentially
+
+-disable automatic media deletion, to allow people to move their media in their folder
 
 -use version string in windows build
 
--Timezone bug: December 12, 2011 07:10 PM Beijing Time (Murray James Morrison)
-
 -save tree state (which nodes are expanded or not) (Troy Guze)
+QModelIndexList QAbstractItemModel::persistentIndexList () const
+bool isExpanded ( const QModelIndex & index ) const
 
 -reduce timeout on sync login, test again full sync
 
@@ -27,7 +37,10 @@ http://stackoverflow.com/questions/2545577/qsplitter-becoming-undistinguishable-
 
 -after showing answer, exiting card browser hides answer again
  
--also give warning on the client side if a sync failed and a backup needs to happen 
+-also give warning on the client side if a sync failed and a backup needs to happen
+-detect long filenames under Windows during sync (partner, download binary file, 36)
+ and during import
+-sync issues Doug, prevent sync with itself
 -prevent sync with itself 
 -binary database upload: configuration changes (fonts, ...) are not applied 
 -syncing an empty database twice results in a spurious sync cycle detection. Also happens after 
@@ -64,6 +77,8 @@ http://stackoverflow.com/questions/2545577/qsplitter-becoming-undistinguishable-
 
 -tell beta users to make sure to install latest beta first
 -remove upgrade_beta_6.py, beta_7, etc...
+
+-'duplicate card' option in menu and browser?
 
 -upgrade to qt 4.7.4, retest progress bars
 -make distrib under linux
@@ -148,6 +163,8 @@ http://dotancohen.com/howto/rtl_right_to_left.html
 -hoop up all dialogs in UDP
 
 -pinyin sort
+
+-kivy, python for android
 
 -cntrl-c shortcut for question and answer
 
