@@ -231,6 +231,9 @@ class Database(Component):
     # used to limit the number of cards returned by the iterator, with -1
     # meaning no limit.
     
+    def cards(self, sort_key="", limit=-1):
+        raise NotImplementedError
+
     def cards_due_for_ret_rep(self, now, sort_key="", limit=-1):
         raise NotImplementedError
 
